# Desktop-Genesis

./: README.md  c++Updates.md  linuxresult.html  linuxtest.c  result.html  resultjyothsnacppproject.html  resultjyothsnapythonproject.html  resultsandhyacppproject.html  sandhyaresult.html  xyzasd.c
Downloads-Genesis/: GENESIS - Learning Outcome & Mini-project Summary Report.docx  LR_APPLIED_SDLC_99002500.docx  TDLC(Day-1).txt  activity diagram calci.vpd  classesand objects.docx  object_test.cc  objectdb.cc
Downloads-Genesis/Cpp-Assessment/99002539/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  flighttrip.cc  flighttrip.h  trip-test.cpp  trip.cc  trip.h  tripdb-test.cpp  tripdb.cc  tripdb.h
Downloads-Genesis/assessment_problem_tripdb/: Makefile
Downloads-Genesis/busybox-1.26.0/: .busybox_unstripped.cmd  .config  .config.old  busybox.links  busybox_unstripped.map  busybox_unstripped.out
Genesis/: abcd.py  chkhosts.sh  cpp notes  cppgeneralfeatures.odt  day3  namespacecpp.docx  scanning.h  scanning.sh  sdlc day summary  sdlc docs.odt  sdlc.docx  somefile.py  tddimplementation.docx  tddimplementation.odt  teamproject.docx  teamproject.odt  templatestl.docx
Genesis/Calculator-Project-master/: README.md
Genesis/Cplusplusandpython/: a.out  bst  bst.cpp  fact.py  hello  hello.cpp  leak.cpp
Genesis/Linux and OS/: namespacecpp.docx
Genesis/SDLC Report/: LR_APPLIED_SDLC_99002500.docx
Genesis/basic files/: abcd.py  dsfrf.txt  employees.csv  hello.sh  inheritance.py  picking.py  reading.cc  script.sh  xyz.txt
LinuxProjectchatroom/: chatroom.c
(+2922 files in other folders)
